Fixing example requests on docs
