# docs/swagger.json
@@ -1,119 +1,4 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-        "title": "GRAU API",
-        "description": "The GRAU API: a RESTful API for the GRAU project. Bringing the power to the people.",
-        "version": "1.0.0"
-    },
-    "servers": [
-        {
-            "url": "http://localhost:5000",
-            "description": "Local server"
-        }
-    ],
-    "paths": {
-        "/create_user": {
-            "post": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Create a new user.",
-                "description": "Create a new user.",
-                "requestBody": {
-                    "description": "User object to be created",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/UserSchema"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "User created successfully"
-                    },
-                    "409": {
-                        "description": "User already exists"
-                    }
-                }
-            }
-        },
-        "/login": {
-            "get": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Login a user.",
-                "description": "Login a user.",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "description": "email of the user to login",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "example": "dan@gmail.com"
-                        }
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "password of the user to login",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "example": null
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Login successful"
-                    },
-                    "401": {
-                        "description": "Login failed"
-                    }
-                }
-            }
-        },
-        "/logout": {
-            "post": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Logout a user.",
-                "description": "Logout a user.",
-                "responses": {
-                    "200": {
-                        "description": "Logout successful"
-                    },
-                    "400": {
-                        "description": "Logout failed due to invalid credentials"
-                    }
-                }
-            }
-        },
-        "/user_authenticated": {
-            "get": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Test authentication.",
-                "description": "Test authentication.",
-                "responses": {
-                    "200": {
-                        "description": "User authenticated"
-                    },
-                    "500": {
-                        "description": "User not authenticated"
-                    }
-                }
-            }
-        }
-    },
     "components": {
         "schemas": {
             "DateFormat": {
@@ -159,40 +44,6 @@
             "UserSchema": {
                 "description": "\n    Schema for validating user data\n    ",
                 "properties": {
-                    "username": {
-                        "example": "danlen97",
-                        "maxLength": 100,
-                        "minLength": 8,
-                        "pattern": "^[A-Za-z0-9]+$",
-                        "title": "Username",
-                        "type": "string"
-                    },
-                    "email": {
-                        "example": "dan@gmail.com",
-                        "format": "email",
-                        "title": "Email",
-                        "type": "string"
-                    },
-                    "password": {
-                        "maxLength": 100,
-                        "minLength": 8,
-                        "pattern": "^[A-Za-z0-9@#$%^&+=]+$",
-                        "title": "Password",
-                        "type": "string"
-                    },
-                    "status": {
-                        "allOf": [
-                            {
-                                "$ref": "#/components/schemas/ProfileStatus"
-                            }
-                        ],
-                        "default": "active"
-                    },
-                    "premium": {
-                        "default": false,
-                        "title": "Premium",
-                        "type": "boolean"
-                    },
                     "age": {
                         "maximum": 125,
                         "minimum": 0,
@@ -200,9 +51,18 @@
                         "type": "integer"
                     },
                     "birthday": {
-                        "maxLength": 10,
-                        "minLength": 10,
+                        "example": "1997-05-18",
+                        "format": "date",
                         "title": "Birthday",
+                        "type": "string"
+                    },
+                    "date_format_pref": {
+                        "$ref": "#/components/schemas/DateFormat"
+                    },
+                    "email": {
+                        "example": "dan@gmail.com",
+                        "format": "email",
+                        "title": "Email",
                         "type": "string"
                     },
                     "first_name": {
@@ -213,32 +73,11 @@
                         "title": "First Name",
                         "type": "string"
                     },
-                    "last_name": {
-                        "example": "Lenehan",
-                        "maxLength": 50,
-                        "minLength": 3,
-                        "pattern": "^[A-Za-z0-9]+$",
-                        "title": "Last Name",
-                        "type": "string"
-                    },
                     "gender": {
                         "$ref": "#/components/schemas/Gender"
                     },
-                    "phone_number": {
-                        "example": "07123456789",
-                        "maxLength": 64,
-                        "minLength": 7,
-                        "title": "Phone Number",
-                        "type": "string"
-                    },
                     "height_unit_pref": {
                         "$ref": "#/components/schemas/HeightUnits"
-                    },
-                    "weight_unit_pref": {
-                        "$ref": "#/components/schemas/WeightUnits"
-                    },
-                    "date_format_pref": {
-                        "$ref": "#/components/schemas/DateFormat"
                     },
                     "language": {
                         "description": "Language setting for the user's account",
@@ -248,6 +87,53 @@
                         "pattern": "^[A-Za-z]+$",
                         "title": "Language",
                         "type": "string"
+                    },
+                    "last_name": {
+                        "example": "Lenehan",
+                        "maxLength": 50,
+                        "minLength": 3,
+                        "pattern": "^[A-Za-z0-9]+$",
+                        "title": "Last Name",
+                        "type": "string"
+                    },
+                    "password": {
+                        "example": "RLp6^$L2Ro",
+                        "maxLength": 100,
+                        "minLength": 8,
+                        "pattern": "^[A-Za-z0-9@#$%^&+=]+$",
+                        "title": "Password",
+                        "type": "string"
+                    },
+                    "phone_number": {
+                        "example": "+447308831531",
+                        "maxLength": 64,
+                        "minLength": 7,
+                        "title": "Phone Number",
+                        "type": "string"
+                    },
+                    "premium": {
+                        "default": false,
+                        "title": "Premium",
+                        "type": "boolean"
+                    },
+                    "status": {
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/ProfileStatus"
+                            }
+                        ],
+                        "default": "active"
+                    },
+                    "username": {
+                        "example": "danlen97",
+                        "maxLength": 100,
+                        "minLength": 8,
+                        "pattern": "^[A-Za-z0-9]+$",
+                        "title": "Username",
+                        "type": "string"
+                    },
+                    "weight_unit_pref": {
+                        "$ref": "#/components/schemas/WeightUnits"
                     }
                 },
                 "required": [
@@ -279,5 +165,118 @@
                 "type": "string"
             }
         }
-    }
+    },
+    "info": {
+        "description": "The GRAU API: a RESTful API for the GRAU project.Bringing the power to the people.",
+        "title": "GRAU API",
+        "version": "1.0.0"
+    },
+    "openapi": "3.0.0",
+    "paths": {
+        "/create_user": {
+            "post": {
+                "description": "Create a new user.",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UserSchema"
+                            }
+                        }
+                    },
+                    "description": "User object to be created",
+                    "required": true
+                },
+                "responses": {
+                    "201": {
+                        "description": "User created successfully"
+                    },
+                    "409": {
+                        "description": "User already exists"
+                    }
+                },
+                "summary": "Create a new user.",
+                "tags": [
+                    "Users"
+                ]
+            }
+        },
+        "/login": {
+            "post": {
+                "description": "Login a user.",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "example": "dan@gmail.com",
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "example": "RLp6^$L2Ro",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Login successful"
+                    },
+                    "401": {
+                        "description": "Login failed"
+                    }
+                },
+                "summary": "Login a user.",
+                "tags": [
+                    "Users"
+                ]
+            }
+        },
+        "/logout": {
+            "post": {
+                "description": "Logout a user.",
+                "responses": {
+                    "200": {
+                        "description": "Logout successful"
+                    },
+                    "400": {
+                        "description": "Logout failed due to invalid credentials"
+                    }
+                },
+                "summary": "Logout a user.",
+                "tags": [
+                    "Users"
+                ]
+            }
+        },
+        "/user_authenticated": {
+            "get": {
+                "description": "Test authentication.",
+                "responses": {
+                    "200": {
+                        "description": "User authenticated"
+                    },
+                    "500": {
+                        "description": "User not authenticated"
+                    }
+                },
+                "summary": "Test authentication.",
+                "tags": [
+                    "Users"
+                ]
+            }
+        }
+    },
+    "servers": [
+        {
+            "description": "Local server",
+            "url": "http://localhost:5000"
+        }
+    ]
 }
